--- a/config.jsonc
+++ b/config.jsonc
@@ -1,73 +1,48 @@
 {
     "position": "top",
     "layer": "top",
-    "height": 16,
-    "margin-top": 0,
+    "height": 26,
+    "margin-top": 5,
     "margin-bottom": 0,
-    "margin-left": 0,
-    "margin-right": 0,
-    "modules-left": ["custom/launcher", "wlr/workspaces", "custom/playerctl", "custom/playerlabel"],
-    "modules-center": ["cpu", "memory", "disk"],
-    "modules-right": ["tray", "custom/randwall", "network", "pulseaudio", "clock"],
+    "margin-left": 4,
+    "margin-right": 4,
+    "modules-left": ["custom/launcher","custom/separator", "wlr/workspaces", "custom/separator", "cpu", "custom/separator","memory", "custom/separator", "disk"],
+    "modules-center": ["mpris"],
+    "modules-right": ["tray", "custom/separator","bluetooth", "custom/separator","network", "custom/separator","wireplumber", "custom/separator","clock", "custom/separator","custom/power"],
+
     // Modules configuration
+
 	"clock": {
-		"format": " {:%H:%M}",
+		"format": "   {:%H:%M} ",
 		"tooltip": "true",
-        	"tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-        	"format-alt": " {:%d/%m}"
+        "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
+        "format-alt": "   {:%d/%m} "
 	},
 	
 
 	"wlr/workspaces": {
-        "active-only": false,
         "all-outputs": true,
-        "disable-scroll": false,
+        // "disable-scroll": false,
         "on-scroll-up": "hyprctl dispatch workspace -1",
         "on-scroll-down": "hyprctl dispatch workspace +1",
 		"format": "{icon}",
 		"on-click": "activate",
 		"format-icons": {
-//			"1": "一",
-//			"2": "二",
-//			"3": "三",
-//			"4": "四",
-//			"5": "五",
+            // "1": "",
+            // "2": "",
+            // "3": "",
+            // "4": "",
+            // "5": "",
 			"urgent": "",
 			"active": "",
 			"default": "󰧞",
-    "sort-by-number": true
-    },
-    },
-
-    "custom/playerctl": {
-      "format": "{icon}",
-      "return-type": "json",
-      "max-length": 64,
-      "exec": "playerctl -a metadata --format '{\"text\": \"{{artist}} - {{markup_escape(title)}}\", \"tooltip\": \"{{playerName}} : {{markup_escape(title)}}\", \"alt\": \"{{status}}\", \"class\": \"{{status}}\"}' -F",
-      "on-click-middle": "playerctl play-pause",
-      "on-click": "playerctl previous",
-      "on-click-right": "playerctl next",
-      "format-icons": {
-        "Playing": "<span foreground='#E5B9C6'>󰒮 󰐌 󰒭</span>",
-        "Paused": "<span foreground='#928374'>󰒮 󰏥 󰒭</span>"
-      },
+        },
+        "sort-by-number": true
     },
 
-    "custom/playerlabel": {
-      "format": "<span>{}</span>",
-      "return-type": "json",
-      "max-length": 48,
-      "exec": "playerctl -a metadata --format '{\"text\": \"{{artist}} - {{markup_escape(title)}}\", \"tooltip\": \"{{playerName}} : {{markup_escape(title)}}\", \"alt\": \"{{status}}\", \"class\": \"{{status}}\"}' -F",
-      "on-click-middle": "playerctl play-pause",
-      "on-click": "playerctl previous",
-      "on-click-right": "playerctl next",
-      "format-icons": {
-        "Playing": "<span foreground='#E5B9C6'>󰒮 󰐌 󰒭</span>",
-        "Paused": "<span foreground='#928374'>󰒮 󰏥 󰒭</span>"
-      },
-    },
 
 	"battery": {
+        "interval": 60,
         "states": {
             "good": 95,
             "warning": 30,
@@ -77,92 +52,128 @@
         "format-charging": "{capacity}% ",
         "format-plugged": "{capacity}% ",
         "format-alt": "{icon} {time}",
-        // "format-good": "", // An empty format will hide the module
-        // "format-full": "",
-        "format-icons": ["", "", "", "", ""]
+        "format-icons": ["", "", "", "", ""],
+        "max-length": 25
 	},
 
-  "memory": {
-    "format": "󰍛 {}%",
-    "format-alt": "󰍛 {used}/{total} GiB",
-    "interval": 5
-  },
+    "memory": {
+        "format": "󰍛 {}%",
+        "format-alt": "󰍛 {used}/{total} GiB",
+        "interval": 1
+    },
 
-  "cpu": {
-    "format": "󰻠 {usage}%",
-    "format-alt": "󰻠 {avg_frequency} GHz",
-    "interval": 5
-  },
+    "cpu": {
+        "format": "󰻠 {usage}%",
+        "format-alt": "󰻠 {avg_frequency} GHz",
+        "interval": 1
+    },
 
-  "disk": {
-    "format": "󰋊 {}%",
-    "format-alt": "󰋊 {used}/{total} GiB",
-    "interval": 5,
-    "path": "/mnt/Datos"
-  },
+    "disk": {
+        "format": "󰋊 {}%",
+        "format-alt": "󰋊 {used}/{total} GiB",
+        "interval": 1,
+        "path": "/"
+    },
 	
-	"network": {
-        	"format-wifi": "󰤨",
-        	"format-ethernet": " {ifname}: Aesthetic",
-        	"format-linked": " {ifname} (No IP)",
-        	"format-disconnected": "󰤭",
-        	"format-alt": " {ifname}: {ipaddr}/{cidr}",
-          "tooltip-format": "{essid}",
-          "on-click-right": "nm-connection-editor"
-	},
+    "network": {
+        "format": " {ifname} ",
+        "format-wifi": "   {ifname}: {essid} ({signalStrength}%) ",
+        "format-ethernet": "   {ifname}: {ipaddr}/{cidr} ",
+        "format-disconnected": " 󰤭  ", //An empty format will hide the module.
+        "tooltip-format": "   {ifname} via {gwaddr} ",
+        "max-length": 50
+    },
+
 
 	"tray": {
 		"icon-size": 16,
 		"spacing": 5
 	},
 
-	"backlight": {
-        // "device": "acpi_video1",
-	"format": "{icon} {percent}%",
-        "format-icons": ["", "", "", "", "", "", "", "", ""],
-//	"on-scroll-up":,
-//	"on-scroll-down":,
-	},
+    "wireplumber": {
+        "format": "{icon} {volume}%",
+        "format-muted": "  ",
+        "on-click": "qpwgraph",
+        // "on-click-right": "pavucontrol",
+        "format-icons": ["  ", "  ", "   "],
+        "max-volume": 150,
+        "scroll-step": 1
+    },
 
-	"pulseaudio": {
-		"format": "{icon} {volume}%",
-        	"format-muted": "󰝟",
-		"format-icons": {
-			"default": ["󰕿", "󰖀", "󰕾"]
-		},
-		"on-click": "bash ~/.scripts/volume mute",
-    "on-scroll-up": "bash ~/.scripts/volume up",
-    "on-scroll-down": "bash ~/.scripts/volume down",
-    "scroll-step": 5,
-		"on-click-right": "pavucontrol"
-  },
-  "custom/randwall": {
-    "format": "󰏘",
-    "on-click": "bash $HOME/.config/hypr/randwall.sh",
-    "on-click-right": "bash $HOME/.config/hypr/wall.sh"
-  },
-  "custom/launcher": {
-    "format": "󰈸",
-    "on-click": "bash $HOME/.config/rofi/launcher.sh",
-//    "on-click": "wofi --show drun -I -a -n -W 500 -H 376 -s ~/.config/wofi/themes/gruvbox.css",
-    "on-click-right": "bash $HOME/.config/rofi/run.sh"  
-//    "on-click-right": "wofi --show run -I -a -n -W 500 -H 376 -s ~/.config/wofi/themes/gruvbox.css"  
-  },
+    "bluetooth": {
+        "format": "  {status} ",
+        "format-disabled": "", // an empty format will hide the module
+        "format-connected": "  {device_alias} ",
+        "format-connected-battery": "  {device_alias} {device_battery_percentage}% ",
+        // "format-device-preference": [ "device1", "device2" ], // preference list deciding the displayed device
+        "tooltip-format": "{controller_alias}\t{controller_address}\n\n{num_connections} connected",
+        "tooltip-format-connected": "{controller_alias}\t{controller_address}\n\n{num_connections} connected\n\n{device_enumerate}",
+        "tooltip-format-enumerate-connected": "{device_alias}\t{device_address}",
+        "tooltip-format-enumerate-connected-battery": "{device_alias}\t{device_address}\t{device_battery_percentage}%"
+    },
 
-  "custom/wf-recorder": {
-		"format": "{}",
-		"interval": "once",
-		"exec": "echo ''",
-		"tooltip": "false",
-		"exec-if": "pgrep 'wf-recorder'",
-		"on-click": "exec ./scripts/wlrecord.sh",
-		"signal": 8
-	},
+    "mpris": {
+        "format": " {player_icon} {dynamic} ",
+        "format-paused": " {status_icon} <i>{dynamic}</i> ",
+        "max-length": 40,
+        "player-icons": {
+            "default": "▶",
+            "mpv": "🎵"
+        },
+        "status-icons": {
+            "paused": "⏸"
+        },
+        // "ignored-players": ["firefox"]
+    },
 
-  "custom/hyprpicker": {
-    "format": "󰈋",
-    "on-click": "hyprpicker -a -f hex",
-    "on-click-right": "hyprpicker -a -f rgb"
-  },
-  }
-}
+    "custom/pipewire": {
+        "tooltip": false,
+        "max-length": 6,
+        "exec": "$HOME/.config/waybar/scripts/pipewire.sh",
+        "on-click": "pavucontrol",
+        "on-click-right": "qpwgraph"
+    },
+
+    "custom/hyprpicker": {
+        "format": " 󰈋  ",
+        "on-click": "hyprpicker -a -f hex",
+        "on-click-right": "hyprpicker -a -f rgb"
+    },
+
+    
+    "custom/launcher": {
+        "format":" 󰣇 ",
+        "on-click": "exec rofi -show drun",
+        "tooltip": false,
+    },
+
+    "custom/media": {
+        "format": "{icon} {}",
+        "escape": true,
+        "return-type": "json",
+        "max-length": 40,
+        "on-click": "playerctl play-pause",
+        "on-click-right": "playerctl stop",
+        "smooth-scrolling-threshold": 10, // This value was tested using a trackpad, it should be lowered if using a mouse.
+        "on-scroll-up": "playerctl next",
+        "on-scroll-down": "playerctl previous",
+        "format-icons": {
+            "Playing": "<span foreground='#E5B9C6'>󰒮 󰐌 󰒭</span>",
+            "Paused": "<span foreground='#928374'>󰒮 󰏥 󰒭</span>"
+        },
+        "exec": "$HOME/.config/waybar/scripts/mediaplayer.py 2> /dev/null", // Script in resources/custom_modules folder
+    },
+
+    
+    "custom/power": {
+        "format":" ⏻  ",
+        "on-click": "exec ~/.config/rofi/powermenu/powermenu.sh",
+        "tooltip": false,
+    },
+
+    "custom/separator": {
+        "format": " | ",
+        "interval": "once",
+        "tooltip": false
+    },
+ }
